[FIX] fix footer alignment

--- a/main.css
+++ b/main.css
@@ -105,7 +105,6 @@ a.btn {
 }
 
 footer {
-    display: flex;
     text-align: center;
     justify-content: center;
     width: 100%;
